src/scss/components/_button.scss
.btn {
  font-size: $font-button;
  line-height: 1.22;
  padding: space(8);
  border-radius: 10px;
  transition: all $animation-speed-fast ease-in-out;
  box-sizing: border-box;
  background-color: $san-juan;
  color: $white;
  border: 3.5px solid $san-juan;
  cursor: pointer;
  display: inline-block;
  @include button-hvr;
  @include button-focus;

  @include bp-md {
    padding: space(16);
  }

  &__icon {
    padding-left: space(16);
  }

  &--s {
    font-size: $font-body-m;
    line-height: 1.16;
    padding: space(16);
  }

  &--l {
    padding: space(24) space(40);
  }

  &:disabled {
    background-color: $mercury;
    cursor: not-allowed;
    border: 3.5px solid $mercury;

    &:hover {
      box-shadow: none;
    }
  }
  /* Alt */
  &--alt {
    border-radius: 40px;
    transition: all $animation-speed-fast linear;

    &--m {
      background-color: $white;
      color: $san-juan;
      border: 2px solid $san-juan;
      @include button-hvr-alt($san-juan, 4px);
    }

    &--s {
      background-color: $cranberry;
      color: $white;
      border: 2px solid $cranberry;
      padding: space(8) space(16);
      @include button-hvr-alt($white, 4px);
    }

    &--l {
      background-color: $san-juan;
      border: 2px solid $white;
      color: $white;
      font-size: $font-body-m;
      padding: space(10) space(40);
      @include button-hvr-alt($white, 4px);
    }
  }
  /* Category */
  &--category {
    background-color: $white;
    color: $san-juan;
    border: 2px solid $san-juan;
    padding: space(10) space(16);
    @include button-hvr-alt($san-juan, 4px);
  }

  /* Header options nav */
  &--header {
    font-size: $font-body-xs;
    color: $san-juan;
    display: block;

    @include bp-md {
      display: inline-block;
      font-size: $font-body-m;
      background-color: $white;
      border: 1px solid $san-juan;
      padding: space(8) space(16);
      @include button-hvr-alt($san-juan, 2px);
      @include button-hvr;
      border-radius: 0 0 10px 10px;
    }

    &:active,
    :focus {
      box-shadow: none;
      border: 2px solid $downy;
    }
  }
}

.btn--alt,
.btn--category,
.btn--header {
  &:disabled,
  &.btn--category--disabled,
  &.btn--header--disabled {
    background-color: $white;
    cursor: not-allowed;
    border: 2px solid $mercury;
    box-shadow: none;
    color: $downy;
  }
}

